// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddSourceModal should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
[
  [
    {
      "name": "Test Scan",
      "options": {
        "disabled_optional_products": {
          "jboss_eap": false,
          "jboss_fuse": false,
          "jboss_ws": false,
        },
        "enabled_extended_product_search": {
          "jboss_eap": false,
          "jboss_fuse": false,
          "jboss_ws": false,
          "search_directories": [],
        },
        "max_concurrency": 25,
      },
      "scan_type": "inspect",
      "sources": [],
    },
  ],
]
`;

exports[`AddSourceModal should render a basic component: basic 1`] = `
<Modal
  appendTo={[Function]}
  aria-labelledby="_r_f_"
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  variant="small"
>
  <ModalHeader
    labelId="_r_f_"
    title="t([
  "view.sources.modal-title.new-scan"
])"
  />
  <ModalBody>
    <ScanForm
      onClearErrors={[Function]}
      onClose={[Function]}
      onSubmit={[Function]}
    />
  </ModalBody>
</Modal>
`;

exports[`Conditional Deep Scan Display should NOT show deep scan options when scanning a non-network source: non-network source without deep scan options 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-5"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_24_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_26_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-4"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_26_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_24_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  >
                    Satellite Source
                  </textarea>
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_2d_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_2f_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_2g_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_2h_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_2i_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Conditional Deep Scan Display should NOT show deep scan options when scanning multiple non-network sources: multiple non-network sources without deep scan options 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-7"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_39_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_3b_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-6"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_3b_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_39_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  >
                    Satellite Source, vCenter Source
                  </textarea>
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_3i_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_3k_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_3l_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_3m_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_3n_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Conditional Deep Scan Display should NOT show search directories field for non-network sources even if sources prop is undefined: undefined sources without deep scan options 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-9"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_4f_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_4h_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-8"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_4h_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_4f_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_4o_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_4q_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_4r_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_4s_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_4t_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Conditional Deep Scan Display should show deep scan options when scanning a network source: network source with deep scan options 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-4"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_1e_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_1g_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-3"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_1g_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_1e_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  >
                    Network Source
                  </textarea>
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_1n_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_1p_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_1q_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="deepScans-legend"
              class="pf-v6-c-form__group"
              role="group"
            >
              <div
                class="pf-v6-c-form__group-label pf-m-no-padding-top"
                id="deepScans-legend"
              >
                <span
                  class="pf-v6-c-form__label"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.label"
])
                  </span>
                </span>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control pf-m-stack"
              >
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_eap"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_eap"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_eap"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_eap"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_fuse"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_fuse"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_fuse"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_fuse"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_ws"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_ws"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_ws"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_ws"
])
                  </label>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_22_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_23_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Conditional Deep Scan Display should show deep scan options when scanning mixed source types including network: mixed sources with deep scan options 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-6"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_2j_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_2l_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-5"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_2l_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_2j_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  >
                    Network Source, Satellite Source
                  </textarea>
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_2s_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_2u_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_2v_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="deepScans-legend"
              class="pf-v6-c-form__group"
              role="group"
            >
              <div
                class="pf-v6-c-form__group-label pf-m-no-padding-top"
                id="deepScans-legend"
              >
                <span
                  class="pf-v6-c-form__label"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.label"
])
                  </span>
                </span>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control pf-m-stack"
              >
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_eap"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_eap"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_eap"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_eap"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_fuse"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_fuse"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_fuse"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_fuse"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_ws"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_ws"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_ws"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_ws"
])
                  </label>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_37_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_38_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Conditional Deep Scan Display should show search directories field when deep scan is checked and source is network: network source with search directories after deep scan check 1`] = `
<body
  class="pf-v6-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v6-c-backdrop"
    id="pf-modal-part-8"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="_r_3o_"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-sm"
        data-ouia-component-id="OUIA-Generated-Modal-small-_r_3q_"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-7"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-_r_3q_-ModalBoxCloseButton"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="_r_3o_"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              t([
  "view.sources.modal-title.new-scan"
])
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          <form
            class="pf-v6-c-form"
            novalidate=""
          >
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="name"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.name.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    data-ouia-component-id="name"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    id="scan-name"
                    name="name"
                    placeholder="t([
  "view.sources.scan-modal.name.placeholder"
])"
                    required=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="sources"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.sources.label"
])
                  </span>
                  <span
                    aria-hidden="true"
                    class="pf-v6-c-form__label-required"
                  >
                     
                    *
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both pf-m-disabled"
                >
                  <textarea
                    aria-invalid="false"
                    disabled=""
                    id="scan-sources"
                    name="sources"
                    required=""
                  >
                    Network Source
                  </textarea>
                </span>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="maxConcurrency"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.max-concurrency.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-number-input"
                  data-ouia-component-id="scan_concurrency"
                >
                  <div
                    class="pf-v6-c-input-group"
                  >
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-minus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_41_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <span
                        class="pf-v6-c-form-control"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-input"
])"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-_r_43_"
                          data-ouia-component-type="PF6/TextInput"
                          data-ouia-safe="true"
                          name="input"
                          type="number"
                          value="25"
                        />
                      </span>
                    </div>
                    <div
                      class="pf-v6-c-input-group__item"
                    >
                      <button
                        aria-label="t([
  "view.sources.scan-modal.max-concurrency.aria-plus"
])"
                        class="pf-v6-c-button pf-m-control"
                        data-ouia-component-id="OUIA-Generated-Button-control-_r_44_"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__icon"
                        >
                          <span
                            class="pf-v6-c-number-input__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="deepScans-legend"
              class="pf-v6-c-form__group"
              role="group"
            >
              <div
                class="pf-v6-c-form__group-label pf-m-no-padding-top"
                id="deepScans-legend"
              >
                <span
                  class="pf-v6-c-form__label"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.label"
])
                  </span>
                </span>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control pf-m-stack"
              >
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_eap"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_eap"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_eap"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_eap"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_fuse"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_fuse"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_fuse"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_fuse"
])
                  </label>
                </div>
                <div
                  class="pf-v6-c-check"
                >
                  <input
                    aria-invalid="false"
                    class="pf-v6-c-check__input"
                    data-ouia-component-id="options_jboss_ws"
                    data-ouia-component-type="PF6/Checkbox"
                    data-ouia-safe="true"
                    id="deep-scan-jboss_ws"
                    type="checkbox"
                  />
                  <label
                    class="pf-v6-c-check__label"
                    for="deep-scan-jboss_ws"
                  >
                    t([
  "view.sources.scan-modal.deep-scan.jboss_ws"
])
                  </label>
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group"
            >
              <div
                class="pf-v6-c-form__group-label"
              >
                <label
                  class="pf-v6-c-form__label"
                  for="searchDirectories"
                >
                  <span
                    class="pf-v6-c-form__label-text"
                  >
                    t([
  "view.sources.scan-modal.search-dirs.label"
])
                  </span>
                </label>
                  
              </div>
              <div
                class="pf-v6-c-form__group-control"
              >
                <span
                  class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both"
                >
                  <textarea
                    aria-invalid="false"
                    data-ouia-component-id="scan_alt_dirs"
                    id="scan-alt-scan"
                    name="searchDirectories"
                  />
                </span>
                <div
                  class="pf-v6-c-helper-text"
                >
                  t([
  "view.sources.scan-modal.search-dirs.helper"
])
                </div>
              </div>
            </div>
            <div
              class="pf-v6-c-form__group pf-m-action"
            >
              <div
                class="pf-v6-c-form__group-control"
              >
                <div
                  class="pf-v6-c-form__actions"
                >
                  <button
                    class="pf-v6-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-_r_4c_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.save"
])
                    </span>
                  </button>
                  <button
                    class="pf-v6-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-_r_4d_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      t([
  "view.sources.scan-modal.actions.cancel"
])
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</body>
`;
